-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
-----------[ cut here ]-----------
RTNL: assertion failed at include/net/netdev_lock.h (56)
WARNING: CPU: 8 PID: 970 at include/net/netdev_lock.h:56 __linkwatch_sync_dev+0x226/0x280
Modules linked in: ptlrpc(O+) obdclass(O) ksocklnd(O) lnet(O) libcfs(O)
CPU: 8 UID: 0 PID: 970 Comm: insmod Tainted: G O 6.15.0-ktest #1 NONE
Tainted: [O]=OOT_MODULE
Hardware name: QEMU Standard PC (Q35 + ICH9, 2009), BIOS 1.16.3-debian-1.16.3-2 04/01/2014
RIP: 0010:__linkwatch_sync_dev+0x226/0x280
Code: 91 9d 6a 01 00 0f 85 9c fe ff ff c6 05 84 9d 6a 01 01 48 c7 c7 20 6f e4 82 48 c7 c6 c0 6f e4 82 ba 38 00 00 00 e8 ba 13 d8 fe <0f> 0b e9 76 fe ff ff 0f 0b e9 6f fe ff ff 44 89 f1 80 e1 07 38 c1
RSP: 0018:ffffc9000158f6f8 EFLAGS: 00010246
RAX: c46b98523d3e6200 RBX: ffff8881086d6000 RCX: 0000000000000027
RDX: 0000000000000001 RSI: 0000000000000004 RDI: ffff8882a3023750
RBP: dffffc0000000000 R08: ffff8882a3023753 R09: 1ffff110546046ea
R10: dffffc0000000000 R11: ffffed10546046eb R12: dffffc0000000000
R13: dffffc0000000000 R14: ffff8881086d69c8 R15: ffffffff82e1aca0
FS: 00007f8d81264340(0000) GS:ffff88831edaa000(0000) knlGS:0000000000000000
CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 00007f8d80b7dd40 CR3: 0000000118a65000 CR4: 0000000000750eb0
PKRU: 55555554
Call Trace:
<TASK>
ethtool_op_get_link+0x12/0x60
lnet_get_link_status+0x1f7/0x420 [lnet]
ksocknal_startup+0x1269/0x22a0 [ksocklnd]
? ksocknal_startup+0xdbc/0x22a0 [ksocklnd]
lnet_startup_lndnet+0x73e/0x25e0 [lnet]
? list_move_tail+0x34/0x50
LNetNIInit+0x9cb/0x1120 [lnet]
ptlrpc_init_portals+0xb6/0x380 [ptlrpc]
init_module+0x2f8/0x1000 [ptlrpc]
do_one_initcall+0x119/0x410
? llcrypt_msg+0x1090/0x1090 [libcfs]
? stack_depot_save_flags+0x41/0x830
? kasan_save_track+0x40/0x70
? kasan_save_track+0x2f/0x70
? __kasan_kmalloc+0x72/0x80
? do_init_module+0x8e/0x7c0
? __x64_sys_finit_module+0x3b5/0x5b0
? do_syscall_64+0x6c/0x140
? entry_SYSCALL_64_after_hwframe+0x4b/0x53
? pcpu_alloc_noprof+0xadd/0xf70
? codetag_module_init+0x273/0x350
? load_module+0x3489/0x4390
? lock_acquire+0xe7/0x1f0
? __kmalloc_cache_noprof+0x34/0x270
? kasan_unpoison+0x48/0x70
? kasan_unpoison+0x48/0x70
? __asan_register_globals+0x59/0x70
do_init_module+0x2ce/0x7c0
__x64_sys_finit_module+0x3b5/0x5b0
do_syscall_64+0x6c/0x140
? arch_exit_to_user_mode_prepare+0x9/0x40
entry_SYSCALL_64_after_hwframe+0x4b/0x53
RIP: 0033:0x7f8d80b18779
Code: ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 4f 86 0d 00 f7 d8 64 89 01 48
RSP: 002b:00007ffeaff74d58 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
RAX: ffffffffffffffda RBX: 0000560ea59ef890 RCX: 00007f8d80b18779
RDX: 0000000000000000 RSI: 0000560ea59ee2a0 RDI: 0000000000000003
RBP: 0000000000000000 R08: 0000000000000000 R09: 00007f8d80bf85c0
R10: 0000000000000000 R11: 0000000000000246 R12: 0000560ea59ee2a0
R13: 0000000000000000 R14: 0000560ea59ef850 R15: 0000000000000003
</TASK>
--[ end trace 0000000000000000 ]--