LU-19707 lnet: fix RTNL assert in LNet on v6.15

Testing on Linux v6.15:

RTNL: assertion failed at include/net/netdev_lock.h (56)
WARNING: CPU: 8 PID: 970 at include/net/netdev_lock.h:56 __linkwatch_sync_dev+0x226/0x280
...
Call Trace:
 <TASK>
 ethtool_op_get_link+0x12/0x60
 lnet_get_link_status+0x1f7/0x420 [lnet]
 ksocknal_startup+0x1269/0x22a0 [ksocklnd]
 ? ksocknal_startup+0xdbc/0x22a0 [ksocklnd]
 lnet_startup_lndnet+0x73e/0x25e0 [lnet]
 ? list_move_tail+0x34/0x50
 LNetNIInit+0x9cb/0x1120 [lnet]
 ptlrpc_init_portals+0xb6/0x380 [ptlrpc]
 init_module+0x2f8/0x1000 [ptlrpc]
 do_one_initcall+0x119/0x410
 ? llcrypt_msg+0x1090/0x1090 [libcfs]
 ? stack_depot_save_flags+0x41/0x830
 ? kasan_save_track+0x40/0x70
 ? kasan_save_track+0x2f/0x70
 ? __kasan_kmalloc+0x72/0x80
 ? do_init_module+0x8e/0x7c0
 ? __x64_sys_finit_module+0x3b5/0x5b0
 ? do_syscall_64+0x6c/0x140
 ? entry_SYSCALL_64_after_hwframe+0x4b/0x53
 ? pcpu_alloc_noprof+0xadd/0xf70
 ? codetag_module_init+0x273/0x350
 ? load_module+0x3489/0x4390
 ? lock_acquire+0xe7/0x1f0
 ? __kmalloc_cache_noprof+0x34/0x270
 ? kasan_unpoison+0x48/0x70
 ? kasan_unpoison+0x48/0x70
 ? __asan_register_globals+0x59/0x70
 do_init_module+0x2ce/0x7c0
 __x64_sys_finit_module+0x3b5/0x5b0
 do_syscall_64+0x6c/0x140
 ? arch_exit_to_user_mode_prepare+0x9/0x40
 entry_SYSCALL_64_after_hwframe+0x4b/0x53
...
 </TASK>

Solve this by holding the need locks in the order
typical in the kernel:

rtnl_lock();
netdev_lock_ops(dev);
...
netdev_unlock_ops(dev);
rtnl_unlock();

Implement the needed configure checks as well.

Test-Parameters: trivial
Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: Ideab7fb1bac89ab1c729ae823dd97cc47ee61a5b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63038
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>