config/lustre-lnet.m4
@@ -1283,6 +1283,26 @@ AC_DEFUN([LN_HAVE_IN_DEV_FOR_EACH_IFA_RTNL], [
 ]) # LN_HAVE_IN_DEV_FOR_EACH_IFA_RTNL
 
 #
+# LN_SRC_HAVE_NETDEV_LOCK_OPS
+#
+# netdev_lock_ops() added in v6.14-rc4-1113-gd4c22ec680 to lock ethtool changes
+#
+AC_DEFUN([LN_SRC_HAVE_NETDEV_LOCK_OPS], [
+	LB2_LINUX_TEST_SRC([netdev_lock_ops], [
+		#include <net/netdev_lock.h>
+	],[
+		netdev_lock_ops(NULL);
+	],[-Werror])
+])
+AC_DEFUN([LN_HAVE_NETDEV_LOCK_OPS], [
+	LB2_MSG_LINUX_TEST_RESULT([if 'netdev_lock_ops' exist],
+	[netdev_lock_ops], [
+		AC_DEFINE(HAVE_NETDEV_LOCK_OPS, 1,
+			['netdev_lock_ops' is present])
+	])
+]) # LN_SRC_HAVE_NETDEV_LOCK_OPS
+
+#
 # LN_USR_RDMA
 #
 #
@@ -1341,6 +1361,8 @@ AC_DEFUN([LN_PROG_LINUX_SRC], [
 	LN_SRC_HAVE_IN_DEV_FOR_EACH_IFA_RTNL
 	# 5.9
 	LN_SRC_CONFIG_SENDPAGE_OK
+	# 6.15
+	LN_SRC_HAVE_NETDEV_LOCK_OPS
 ])
 
 AC_DEFUN([LN_PROG_LINUX_RESULTS], [
@@ -1361,6 +1383,8 @@ AC_DEFUN([LN_PROG_LINUX_RESULTS], [
 	LN_HAVE_IN_DEV_FOR_EACH_IFA_RTNL
 	# 5.9
 	LN_CONFIG_SENDPAGE_OK
+	# 6.15
+	LN_HAVE_NETDEV_LOCK_OPS
 ])
 
 #
